--- a/Database/Flights_Data.ipynb
+++ b/Database/Flights_Data.ipynb
@@ -1498,222 +1498,6 @@
        "      <th></th>\n",
        "      <th>DAY_OF_MONTH</th>\n",
        "      <th>DAY_OF_WEEK</th>\n",
-       "      <th>OP_UNIQUE_CARRIER</th>\n",
-       "      <th>OP_CARRIER_AIRLINE_ID</th>\n",
-       "      <th>OP_CARRIER</th>\n",
-       "      <th>TAIL_NUM</th>\n",
-       "      <th>OP_CARRIER_FL_NUM</th>\n",
-       "      <th>ORIGIN_AIRPORT_ID</th>\n",
-       "      <th>ORIGIN_AIRPORT_SEQ_ID</th>\n",
-       "      <th>ORIGIN</th>\n",
-       "      <th>...</th>\n",
-       "      <th>DEST_AIRPORT_SEQ_ID</th>\n",
-       "      <th>DEST</th>\n",
-       "      <th>DEP_TIME</th>\n",
-       "      <th>DEP_DEL15</th>\n",
-       "      <th>DEP_TIME_BLK</th>\n",
-       "      <th>ARR_TIME</th>\n",
-       "      <th>ARR_DEL15</th>\n",
-       "      <th>CANCELLED</th>\n",
-       "      <th>DIVERTED</th>\n",
-       "      <th>DISTANCE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9E</td>\n",
-       "      <td>20363</td>\n",
-       "      <td>9E</td>\n",
-       "      <td>N8688C</td>\n",
-       "      <td>3280</td>\n",
-       "      <td>11953</td>\n",
-       "      <td>1195302</td>\n",
-       "      <td>GNV</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1039707</td>\n",
-       "      <td>ATL</td>\n",
-       "      <td>601.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0600-0659</td>\n",
-       "      <td>722.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9E</td>\n",
-       "      <td>20363</td>\n",
-       "      <td>9E</td>\n",
-       "      <td>N348PQ</td>\n",
-       "      <td>3281</td>\n",
-       "      <td>13487</td>\n",
-       "      <td>1348702</td>\n",
-       "      <td>MSP</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1119302</td>\n",
-       "      <td>CVG</td>\n",
-       "      <td>1359.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1400-1459</td>\n",
-       "      <td>1633.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9E</td>\n",
-       "      <td>20363</td>\n",
-       "      <td>9E</td>\n",
-       "      <td>N8896A</td>\n",
-       "      <td>3282</td>\n",
-       "      <td>11433</td>\n",
-       "      <td>1143302</td>\n",
-       "      <td>DTW</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1119302</td>\n",
-       "      <td>CVG</td>\n",
-       "      <td>1215.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1200-1259</td>\n",
-       "      <td>1329.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>229</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9E</td>\n",
-       "      <td>20363</td>\n",
-       "      <td>9E</td>\n",
-       "      <td>N8886A</td>\n",
-       "      <td>3283</td>\n",
-       "      <td>15249</td>\n",
-       "      <td>1524906</td>\n",
-       "      <td>TLH</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1039707</td>\n",
-       "      <td>ATL</td>\n",
-       "      <td>1521.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1500-1559</td>\n",
-       "      <td>1625.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>223</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9E</td>\n",
-       "      <td>20363</td>\n",
-       "      <td>9E</td>\n",
-       "      <td>N8974C</td>\n",
-       "      <td>3284</td>\n",
-       "      <td>10397</td>\n",
-       "      <td>1039707</td>\n",
-       "      <td>ATL</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1177801</td>\n",
-       "      <td>FSM</td>\n",
-       "      <td>1847.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1900-1959</td>\n",
-       "      <td>1940.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>579</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   DAY_OF_MONTH  DAY_OF_WEEK OP_UNIQUE_CARRIER  OP_CARRIER_AIRLINE_ID  \\\n",
-       "0             1            2                9E                  20363   \n",
-       "1             1            2                9E                  20363   \n",
-       "2             1            2                9E                  20363   \n",
-       "3             1            2                9E                  20363   \n",
-       "4             1            2                9E                  20363   \n",
-       "\n",
-       "  OP_CARRIER TAIL_NUM  OP_CARRIER_FL_NUM  ORIGIN_AIRPORT_ID  \\\n",
-       "0         9E   N8688C               3280              11953   \n",
-       "1         9E   N348PQ               3281              13487   \n",
-       "2         9E   N8896A               3282              11433   \n",
-       "3         9E   N8886A               3283              15249   \n",
-       "4         9E   N8974C               3284              10397   \n",
-       "\n",
-       "   ORIGIN_AIRPORT_SEQ_ID ORIGIN  ...  DEST_AIRPORT_SEQ_ID  DEST DEP_TIME  \\\n",
-       "0                1195302    GNV  ...              1039707   ATL    601.0   \n",
-       "1                1348702    MSP  ...              1119302   CVG   1359.0   \n",
-       "2                1143302    DTW  ...              1119302   CVG   1215.0   \n",
-       "3                1524906    TLH  ...              1039707   ATL   1521.0   \n",
-       "4                1039707    ATL  ...              1177801   FSM   1847.0   \n",
-       "\n",
-       "   DEP_DEL15  DEP_TIME_BLK ARR_TIME  ARR_DEL15  CANCELLED  DIVERTED  DISTANCE  \n",
-       "0        0.0     0600-0659    722.0        0.0          0         0       300  \n",
-       "1        0.0     1400-1459   1633.0        0.0          0         0       596  \n",
-       "2        0.0     1200-1259   1329.0        0.0          0         0       229  \n",
-       "3        0.0     1500-1559   1625.0        0.0          0         0       223  \n",
-       "4        0.0     1900-1959   1940.0        0.0          0         0       579  \n",
-       "\n",
-       "[5 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "jan_19.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DAY_OF_MONTH</th>\n",
-       "      <th>DAY_OF_WEEK</th>\n",
        "      <th>OP_CARRIER_AIRLINE_ID</th>\n",
        "      <th>OP_CARRIER</th>\n",
        "      <th>TAIL_NUM</th>\n",
@@ -1884,7 +1668,7 @@
        "4    1900-1959    1940.0        0.0          0         0       579  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1896,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2092,7 +1876,7 @@
        "4    1000-1059    1330.0        0.0          0         0      1157  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2104,12 +1888,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['OP_CARRIER', 'TAIL_NUM', 'ORIGIN', 'DEST', 'DEP_TIME_BLK']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "output_file_path1 = \"Data/jan_19_clean.csv\"\n",
-    "jan_19_clean.to_csv(output_file_path1, index=False)"
+    "# Generate our categorical variable list\n",
+    "jan_19_cat = jan_19_clean.dtypes[jan_19_clean.dtypes == \"object\"].index.tolist()\n",
+    "jan_19_cat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['OP_CARRIER', 'TAIL_NUM', 'ORIGIN', 'DEST', 'DEP_TIME_BLK']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generate our categorical variable list\n",
+    "jan_20_cat = jan_20_clean.dtypes[jan_20_clean.dtypes == \"object\"].index.tolist()\n",
+    "jan_20_cat"
    ]
   },
   {
@@ -2118,7 +1936,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file_path2 = \"Data/jan_20_clean.csv\"\n",
+    "output_file_path1 = \"Data/jan_19_clean_data.csv\"\n",
+    "jan_19_clean.to_csv(output_file_path1, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file_path2 = \"Data/jan_20_clean_data.csv\"\n",
     "jan_20_clean.to_csv(output_file_path2, index=False)"
    ]
   },
