updated airport code city cleaning and split out city and state

--- a/airport_code_city.ipynb
+++ b/airport_code_city.ipynb
@@ -396,14 +396,12 @@
     "airport_code_city_dict[\"ABE\"] = [\"Allentown/Bethlehem/Easton, PA\"]\n",
     "airport_code_city_dict[\"ACV\"] = [\"Eureka/Arcata, CA\"]\n",
     "airport_code_city_dict[\"AVL\"] = [\"Asheville/Hendersonville, NC\"]\n",
-    "airport_code_city_dict[\"HTS\"] = [\"Ashland, KY\"]\n",
-    "airport_code_city_dict[\"HTS\"] = [\"Huntington, WV\"]\n",
+    "airport_code_city_dict[\"HTS\"] = [\"Ashland, KY\", \"Huntington, WV\"]\n",
     "airport_code_city_dict[\"MBS\"] = [\"Bay City/Midland/Saginaw, MI\"]\n",
     "airport_code_city_dict[\"BPT\"] = [\"Beaumont/Port Arthur, TX\"]\n",
     "airport_code_city_dict[\"GPT\"] = [\"Biloxi/Gulfport, MS\"]\n",
     "airport_code_city_dict[\"BGM\"] = [\"Binghamton/Endicott/Johnson City, NY\"]\n",
-    "airport_code_city_dict[\"TRI\"] = [\"Bristol/Johnson City/Kingsport, TN\"]\n",
-    "airport_code_city_dict[\"TRI\"] = [\"Bristol, VA\"]\n",
+    "airport_code_city_dict[\"TRI\"] = [\"Bristol, VA\", \"Bristol/Johnson City/Kingsport, TN\"]\n",
     "airport_code_city_dict[\"MRY\"] = [\"Carmel/Monterey, CA\"]\n",
     "airport_code_city_dict[\"CMI\"] = [\"Champaign/Urbana, IL\"]\n",
     "airport_code_city_dict[\"MDW\"] = [\"Chicago - Midway, IL\"]\n",
@@ -421,11 +419,11 @@
     "airport_code_city_dict[\"GSO\"] = [\"Greensboro/High Point, NC\"]\n",
     "airport_code_city_dict[\"GSP\"] = [\"Greenville/Spartanburg, SC\"]\n",
     "airport_code_city_dict[\"SUN\"] = [\"Hailey/Sun Valley, ID\"]\n",
-    "airport_code_city_dict[\"PHF\"] = [\"Hampton, VA/Williamsburg, VA\"]\n",
+    "airport_code_city_dict[\"PHF\"] = [\"Hampton/Williamsburg, VA\"]\n",
     "airport_code_city_dict[\"BDL\"] = [\"Hartford/Windsor Locks, CT\"]\n",
     "airport_code_city_dict[\"ITO\"] = [\"Hilo - Island of Hawaii, HI\"]\n",
     "airport_code_city_dict[\"HNL\"] = [\"Honolulu - Island of Oahu, HI\"]\n",
-    "airport_code_city_dict[\"HOU\"] = [\"Houston - Hobby, TX - All airports\", \"Houston, TX - Hobby\"]\n",
+    "airport_code_city_dict[\"HOU\"] = [\"Houston - Hobby, TX\"]\n",
     "airport_code_city_dict[\"IAH\"] = [\"Houston - George Bush Intercontinental, TX\"]\n",
     "airport_code_city_dict[\"OGG\"] = [\"Kahului- Island of Maui, HI\"]\n",
     "airport_code_city_dict[\"LIH\"] = [\"Lihue - Island of Kaui, HI\"]\n",
@@ -471,7 +469,7 @@
       "Airport code:[ATW] City:[Appleton] State:[WI]\n",
       "Airport code:[ACV] City:[Eureka/Arcata] State:[CA]\n",
       "Airport code:[AVL] City:[Asheville/Hendersonville] State:[NC]\n",
-      "Airport code:[HTS] City:[Huntington] State:[WV]\n",
+      "Airport code:[HTS] City:[Ashland] State:[KY]\n",
       "Airport code:[ASE] City:[Aspen] State:[CO]\n",
       "Airport code:[ATL] City:[Atlanta] State:[GA]\n",
       "Airport code:[AGS] City:[Augusta] State:[GA]\n",
@@ -580,7 +578,7 @@
       "Airport code:[GUC] City:[Gunnison] State:[CO]\n",
       "Airport code:[HGR] City:[Hagerstown] State:[MD]\n",
       "Airport code:[SUN] City:[Hailey/Sun Valley] State:[ID]\n",
-      "Airport code:[PHF] City:[Hampton] State:[VA/Williamsburg]\n",
+      "Airport code:[PHF] City:[Hampton/Williamsburg] State:[VA]\n",
       "Airport code:[CMX] City:[Hancock] State:[MI]\n",
       "Airport code:[HRL] City:[Harlingen] State:[TX]\n",
       "Airport code:[MDT] City:[Harrisburg] State:[PA]\n",
@@ -591,7 +589,7 @@
       "Airport code:[ITO] City:[Hilo - Island of Hawaii] State:[HI]\n",
       "Airport code:[HHH] City:[Hilton Head] State:[SC]\n",
       "Airport code:[HNL] City:[Honolulu - Island of Oahu] State:[HI]\n",
-      "Airport code:[HOU] City:[Houston - Hobby] State:[TX - All airports]\n",
+      "Airport code:[HOU] City:[Houston - Hobby] State:[TX]\n",
       "Airport code:[IAH] City:[Houston - George Bush Intercontinental] State:[TX]\n",
       "Airport code:[HSV] City:[Huntsville] State:[AL]\n",
       "Airport code:[IDA] City:[Idaho Falls] State:[ID]\n",
@@ -687,13 +685,7 @@
       "Airport code:[PNS] City:[Pensacola] State:[FL]\n",
       "Airport code:[PIA] City:[Peoria] State:[IL]\n",
       "Airport code:[PSG] City:[Petersburg] State:[AK]\n",
-      "Airport code:[PHL] City:[Philadelphia] State:[PA]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Airport code:[PHL] City:[Philadelphia] State:[PA]\n",
       "Airport code:[TTN] City:[Trenton/Mercer] State:[NJ]\n",
       "Airport code:[PHX] City:[Phoenix] State:[AZ]\n",
       "Airport code:[PIR] City:[Pierre] State:[SD]\n",
