broken api call loop

--- a/airport_weather.ipynb
+++ b/airport_weather.ipynb
@@ -4617,7 +4617,7 @@
     "for i in complete_flight_df['ORIGIN_CITY']:\n",
     "    origin_name.append(i)\n",
     "\n",
-    "#Create for loop for arival airport code\n",
+    "#Create for loop for arrival airport code\n",
     "for i in complete_flight_df['DEST_CITY']:\n",
     "    dest_name.append(i)\n",
     "\n",
@@ -4636,9 +4636,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.worldweatheronline.com/premium/v1/past-weather.ashx?key=95b1b7beca9a449991c03005202108\n"
+     ]
+    }
+   ],
    "source": [
     "# Starting URL for API call to World Weather\n",
     "url = \"http://api.worldweatheronline.com/premium/v1/past-weather.ashx\" + \"?key=\" + weather_api_key\n",
@@ -4647,26 +4655,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'url' is not defined",
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"list\") to str",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-51f8016b1242>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Create an endpoint URL for a city destination\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mairport_url\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0murl\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"&q=\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdest_code\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"&format=json\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"&date=2019-01-\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mairport_url\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'url' is not defined"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-41-8c5eda5b53dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Create an endpoint URL for a city destination\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mairport_url\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0murl\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"&q=\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdest_name\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"&format=json\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"&date=2019-01-\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mairport_url\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"list\") to str"
      ]
     }
    ],
    "source": [
     "# Create an endpoint URL for a city destination\n",
-    "airport_url = url + \"&q=\" + dest_code + \"&format=json\" + \"&date=2019-01-\" + date\n",
+    "airport_url = url + \"&q=\" + dest_name + \"&format=json\" + \"&date=2019-01-\" + date\n",
     "print(airport_url)"
    ]
   },
@@ -4679,6 +4687,87 @@
     "# Create an endpoint for airport weather\n",
     "airport_weather = requests.get(airport_url)\n",
     "airport_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beginning Data Retrieval     \n",
+      "-----------------------------\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for &: 'enumerate' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-44-2270e51e6bb0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Loop through all the cities in the list.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdest\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdest_name\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0mdate\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;31m# Group cities in sets of 50 for logging purposes.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for &: 'enumerate' and 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an empty list to hold the weather data.\n",
+    "city_data = []\n",
+    "# Print the beginning of the logging.\n",
+    "print(\"Beginning Data Retrieval     \")\n",
+    "print(\"-----------------------------\")\n",
+    "\n",
+    "# Create counters.\n",
+    "record_count = 1\n",
+    "set_count = 1\n",
+    "\n",
+    "# Loop through all the cities in the list.\n",
+    "for i, dest in enumerate(dest_name) & date in enumerate(date):\n",
+    "\n",
+    "    # Group cities in sets of 50 for logging purposes.\n",
+    "    if (i % 50 == 0 and i >= 50):\n",
+    "        set_count += 1\n",
+    "        record_count = 1\n",
+    "    # Create endpoint URL with each city.\n",
+    "    airport_url = url + \"&q=\" + dest_name + \"&format=json\" + \"&date=2019-01-\" + date\n",
+    "\n",
+    "    # Log the URL, record, and set numbers and the city.\n",
+    "    print(f\"Processing Record {record_count} of Set {set_count} \")\n",
+    "    # Add 1 to the record count.\n",
+    "    record_count += 1\n",
+    "    \n",
+    "    # Run an API request for each of the cities.\n",
+    "    try:\n",
+    "        # Parse the JSON and retrieve data.\n",
+    "        airport_weather = requests.get(airport_url).json\n",
+    "        # Parse out the needed data.\n",
+    "        org_precipitation = airport_weather['precipMM']\n",
+    "        org_visibility = airport_weather['visibility']\n",
+    "        org_cloud_coverage = airport_weather['cloudcover']\n",
+    "        org_windspeed = airport_weather['windspeedMiles']\n",
+    "        org_humidity = airport_weather['humidity']\n",
+    "        \n",
+    "        # Append the city information into city_data list.\n",
+    "        city_data.append({\"Origin\": origin_name,\n",
+    "                          \"Precipitation\": org_precipitation,\n",
+    "                          \"Visibility\": org_visibility,\n",
+    "                          \"Cloud Coverage\": org_cloud_coverage,\n",
+    "                          \"Windspeed\": org_windspeed,\n",
+    "                          \"Humidity\": org_humidity})\n",
+    "\n",
+    "# If an error is experienced, skip the city.\n",
+    "    except:\n",
+    "        print(\"City not found. Skipping...\")\n",
+    "        pass\n",
+    "\n",
+    "# Indicate that Data Loading is complete.\n",
+    "print(\"-----------------------------\")\n",
+    "print(\"Data Retrieval Complete      \")\n",
+    "print(\"-----------------------------\")"
    ]
   },
   {
