--- a/airport_weather.ipynb
+++ b/airport_weather.ipynb
@@ -4655,43 +4655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"list\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-41-8c5eda5b53dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Create an endpoint URL for a city destination\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mairport_url\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0murl\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"&q=\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdest_name\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"&format=json\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"&date=2019-01-\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mairport_url\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"list\") to str"
-     ]
-    }
-   ],
-   "source": [
-    "# Create an endpoint URL for a city destination\n",
-    "airport_url = url + \"&q=\" + dest_name + \"&format=json\" + \"&date=2019-01-\" + date\n",
-    "print(airport_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create an endpoint for airport weather\n",
-    "airport_weather = requests.get(airport_url)\n",
-    "airport_weather.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -4703,20 +4667,20 @@
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for &: 'enumerate' and 'list'",
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-44-2270e51e6bb0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Loop through all the cities in the list.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdest\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdest_name\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0mdate\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;31m# Group cities in sets of 50 for logging purposes.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for &: 'enumerate' and 'list'"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-65-759b8d4dd6ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Loop through the list.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mORIGIN_CITY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDAY_OF_MONTH\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcomplete_flight_df\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;31m# Group cities in sets of 50 for logging purposes.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
      ]
     }
    ],
    "source": [
     "# Create an empty list to hold the weather data.\n",
-    "city_data = []\n",
+    "weather_data = []\n",
     "# Print the beginning of the logging.\n",
     "print(\"Beginning Data Retrieval     \")\n",
     "print(\"-----------------------------\")\n",
@@ -4725,15 +4689,17 @@
     "record_count = 1\n",
     "set_count = 1\n",
     "\n",
-    "# Loop through all the cities in the list.\n",
-    "for i, dest in enumerate(dest_name) & date in enumerate(date):\n",
+    "# Loop through the list.\n",
+    "for ORIGIN_CITY, DAY_OF_MONTH in complete_flight_df:\n",
     "\n",
     "    # Group cities in sets of 50 for logging purposes.\n",
     "    if (i % 50 == 0 and i >= 50):\n",
     "        set_count += 1\n",
     "        record_count = 1\n",
+    "    \n",
+    "    \n",
     "    # Create endpoint URL with each city.\n",
-    "    airport_url = url + \"&q=\" + dest_name + \"&format=json\" + \"&date=2019-01-\" + date\n",
+    "    airport_url = url + \"&q=\" + ORIGIN_CITY + \"&format=json\" + \"&date=2019-01-\" + DAY_OF_MONTH\n",
     "\n",
     "    # Log the URL, record, and set numbers and the city.\n",
     "    print(f\"Processing Record {record_count} of Set {set_count} \")\n",
@@ -4751,17 +4717,17 @@
     "        org_windspeed = airport_weather['windspeedMiles']\n",
     "        org_humidity = airport_weather['humidity']\n",
     "        \n",
-    "        # Append the city information into city_data list.\n",
-    "        city_data.append({\"Origin\": origin_name,\n",
+    "        # Append the city information into weather_data list.\n",
+    "        weather_data.append({\"Origin\": origin_name,\n",
     "                          \"Precipitation\": org_precipitation,\n",
     "                          \"Visibility\": org_visibility,\n",
     "                          \"Cloud Coverage\": org_cloud_coverage,\n",
     "                          \"Windspeed\": org_windspeed,\n",
     "                          \"Humidity\": org_humidity})\n",
     "\n",
-    "# If an error is experienced, skip the city.\n",
+    "# If an error is experienced, skip the flight.\n",
     "    except:\n",
-    "        print(\"City not found. Skipping...\")\n",
+    "        print(\"Flight not found. Skipping...\")\n",
     "        pass\n",
     "\n",
     "# Indicate that Data Loading is complete.\n",
