--- a/Seg_two_model_B.ipynb
+++ b/Seg_two_model_B.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "4    1900-1959    1940.0        0.0          0         0       579  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -289,12 +289,13 @@
        "      <th>DAY_OF_MONTH</th>\n",
        "      <th>DAY_OF_WEEK</th>\n",
        "      <th>OP_CARRIER</th>\n",
-       "      <th>TAIL_NUM</th>\n",
        "      <th>ORIGIN</th>\n",
        "      <th>DEST</th>\n",
-       "      <th>DEP_TIME</th>\n",
        "      <th>DEP_DEL15</th>\n",
        "      <th>DISTANCE</th>\n",
+       "      <th>DEP_TIME_BLK</th>\n",
+       "      <th>TAIL_NUM</th>\n",
+       "      <th>DEP_TIME</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -303,93 +304,98 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>9E</td>\n",
-       "      <td>N8688C</td>\n",
        "      <td>GNV</td>\n",
        "      <td>ATL</td>\n",
-       "      <td>601.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>300</td>\n",
+       "      <td>0600-0659</td>\n",
+       "      <td>N8688C</td>\n",
+       "      <td>601.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>9E</td>\n",
-       "      <td>N348PQ</td>\n",
        "      <td>MSP</td>\n",
        "      <td>CVG</td>\n",
-       "      <td>1359.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>596</td>\n",
+       "      <td>1400-1459</td>\n",
+       "      <td>N348PQ</td>\n",
+       "      <td>1359.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>9E</td>\n",
-       "      <td>N8896A</td>\n",
        "      <td>DTW</td>\n",
        "      <td>CVG</td>\n",
-       "      <td>1215.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>229</td>\n",
+       "      <td>1200-1259</td>\n",
+       "      <td>N8896A</td>\n",
+       "      <td>1215.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>9E</td>\n",
-       "      <td>N8886A</td>\n",
        "      <td>TLH</td>\n",
        "      <td>ATL</td>\n",
-       "      <td>1521.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>223</td>\n",
+       "      <td>1500-1559</td>\n",
+       "      <td>N8886A</td>\n",
+       "      <td>1521.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>9E</td>\n",
-       "      <td>N8974C</td>\n",
        "      <td>ATL</td>\n",
        "      <td>FSM</td>\n",
-       "      <td>1847.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>579</td>\n",
+       "      <td>1900-1959</td>\n",
+       "      <td>N8974C</td>\n",
+       "      <td>1847.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   DAY_OF_MONTH  DAY_OF_WEEK OP_CARRIER TAIL_NUM ORIGIN DEST  DEP_TIME  \\\n",
-       "0             1            2         9E   N8688C    GNV  ATL     601.0   \n",
-       "1             1            2         9E   N348PQ    MSP  CVG    1359.0   \n",
-       "2             1            2         9E   N8896A    DTW  CVG    1215.0   \n",
-       "3             1            2         9E   N8886A    TLH  ATL    1521.0   \n",
-       "4             1            2         9E   N8974C    ATL  FSM    1847.0   \n",
+       "   DAY_OF_MONTH  DAY_OF_WEEK OP_CARRIER ORIGIN DEST  DEP_DEL15  DISTANCE  \\\n",
+       "0             1            2         9E    GNV  ATL        0.0       300   \n",
+       "1             1            2         9E    MSP  CVG        0.0       596   \n",
+       "2             1            2         9E    DTW  CVG        0.0       229   \n",
+       "3             1            2         9E    TLH  ATL        0.0       223   \n",
+       "4             1            2         9E    ATL  FSM        0.0       579   \n",
        "\n",
-       "   DEP_DEL15  DISTANCE  \n",
-       "0        0.0       300  \n",
-       "1        0.0       596  \n",
-       "2        0.0       229  \n",
-       "3        0.0       223  \n",
-       "4        0.0       579  "
+       "  DEP_TIME_BLK TAIL_NUM  DEP_TIME  \n",
+       "0    0600-0659   N8688C     601.0  \n",
+       "1    1400-1459   N348PQ    1359.0  \n",
+       "2    1200-1259   N8896A    1215.0  \n",
+       "3    1500-1559   N8886A    1521.0  \n",
+       "4    1900-1959   N8974C    1847.0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Create a new dataframe with only relavent testing data\n",
-    "filteredList = ['DAY_OF_MONTH', 'DAY_OF_WEEK', 'OP_CARRIER', 'TAIL_NUM'\n",
-    "                , 'ORIGIN', 'DEST', 'DEP_TIME', 'DEP_DEL15', 'DISTANCE']\n",
+    "filteredList = ['DAY_OF_MONTH', 'DAY_OF_WEEK', 'OP_CARRIER', 'ORIGIN', 'DEST', 'DEP_DEL15', 'DISTANCE'\n",
+    "                ,'DEP_TIME_BLK', 'TAIL_NUM', 'DEP_TIME']\n",
     "\n",
     "columnsRemoved = ['OP_CARRIER_AIRLINE_ID', 'DEST_AIRPORT_SEQ_ID', 'ORIGIN_AIRPORT_SEQ_ID' , 'ORIGIN_AIRPORT_ID'\n",
-    "                  , 'OP_CARRIER_FL_NUM', 'DEST_AIRPORT_ID', 'ARR_TIME', 'ARR_DEL15', 'CANCELLED', 'DIVERTED', 'DEP_TIME_BLK']\n",
+    "                  , 'OP_CARRIER_FL_NUM', 'DEST_AIRPORT_ID', 'ARR_TIME', 'ARR_DEL15', 'CANCELLED', 'DIVERTED', 'DEP_TIME']\n",
     "\n",
     "machine_model_2019_df = flights_2019.filter(filteredList)\n",
     "machine_model_2019_df.head()"
@@ -397,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -416,16 +422,17 @@
        "DAY_OF_MONTH     int64\n",
        "DAY_OF_WEEK      int64\n",
        "OP_CARRIER      object\n",
-       "TAIL_NUM        object\n",
        "ORIGIN          object\n",
        "DEST            object\n",
-       "DEP_TIME         int32\n",
        "DEP_DEL15        int32\n",
        "DISTANCE         int64\n",
+       "DEP_TIME_BLK    object\n",
+       "TAIL_NUM        object\n",
+       "DEP_TIME         int32\n",
        "dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,20 +443,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "OP_CARRIER    object\n",
-       "TAIL_NUM      object\n",
-       "ORIGIN        object\n",
-       "DEST          object\n",
+       "OP_CARRIER      object\n",
+       "ORIGIN          object\n",
+       "DEST            object\n",
+       "DEP_TIME_BLK    object\n",
+       "TAIL_NUM        object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,20 +468,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "OP_CARRIER      17\n",
-       "TAIL_NUM      5441\n",
-       "ORIGIN         346\n",
-       "DEST           346\n",
+       "OP_CARRIER        17\n",
+       "ORIGIN           346\n",
+       "DEST             346\n",
+       "DEP_TIME_BLK      19\n",
+       "TAIL_NUM        5441\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,20 +518,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "OP_CARRIER      17\n",
-       "TAIL_NUM      5441\n",
-       "ORIGIN         346\n",
-       "DEST           346\n",
+       "OP_CARRIER        17\n",
+       "ORIGIN           346\n",
+       "DEST             346\n",
+       "DEP_TIME_BLK      19\n",
+       "TAIL_NUM        5441\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -559,13 +569,14 @@
        "      <th></th>\n",
        "      <th>DAY_OF_MONTH</th>\n",
        "      <th>DAY_OF_WEEK</th>\n",
-       "      <th>DEP_TIME</th>\n",
        "      <th>DEP_DEL15</th>\n",
        "      <th>DISTANCE</th>\n",
+       "      <th>DEP_TIME</th>\n",
        "      <th>OP_CARRIER</th>\n",
-       "      <th>TAIL_NUM</th>\n",
        "      <th>ORIGIN</th>\n",
        "      <th>DEST</th>\n",
+       "      <th>DEP_TIME_BLK</th>\n",
+       "      <th>TAIL_NUM</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -573,97 +584,102 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>601</td>\n",
        "      <td>0</td>\n",
        "      <td>300</td>\n",
+       "      <td>601</td>\n",
        "      <td>0</td>\n",
-       "      <td>4316</td>\n",
        "      <td>128</td>\n",
        "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4316</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>1359</td>\n",
        "      <td>0</td>\n",
        "      <td>596</td>\n",
+       "      <td>1359</td>\n",
        "      <td>0</td>\n",
-       "      <td>1396</td>\n",
        "      <td>225</td>\n",
        "      <td>80</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1396</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>1215</td>\n",
        "      <td>0</td>\n",
        "      <td>229</td>\n",
+       "      <td>1215</td>\n",
        "      <td>0</td>\n",
-       "      <td>4472</td>\n",
        "      <td>95</td>\n",
        "      <td>80</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4472</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>1521</td>\n",
        "      <td>0</td>\n",
        "      <td>223</td>\n",
+       "      <td>1521</td>\n",
        "      <td>0</td>\n",
-       "      <td>4468</td>\n",
        "      <td>325</td>\n",
        "      <td>19</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4468</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>1847</td>\n",
        "      <td>0</td>\n",
        "      <td>579</td>\n",
+       "      <td>1847</td>\n",
        "      <td>0</td>\n",
-       "      <td>4529</td>\n",
        "      <td>19</td>\n",
        "      <td>120</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4529</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   DAY_OF_MONTH  DAY_OF_WEEK  DEP_TIME  DEP_DEL15  DISTANCE  OP_CARRIER  \\\n",
-       "0             1            2       601          0       300           0   \n",
-       "1             1            2      1359          0       596           0   \n",
-       "2             1            2      1215          0       229           0   \n",
-       "3             1            2      1521          0       223           0   \n",
-       "4             1            2      1847          0       579           0   \n",
+       "   DAY_OF_MONTH  DAY_OF_WEEK  DEP_DEL15  DISTANCE  DEP_TIME  OP_CARRIER  \\\n",
+       "0             1            2          0       300       601           0   \n",
+       "1             1            2          0       596      1359           0   \n",
+       "2             1            2          0       229      1215           0   \n",
+       "3             1            2          0       223      1521           0   \n",
+       "4             1            2          0       579      1847           0   \n",
        "\n",
-       "   TAIL_NUM  ORIGIN  DEST  \n",
-       "0      4316     128    19  \n",
-       "1      1396     225    80  \n",
-       "2      4472      95    80  \n",
-       "3      4468     325    19  \n",
-       "4      4529      19   120  "
+       "   ORIGIN  DEST  DEP_TIME_BLK  TAIL_NUM  \n",
+       "0     128    19             1      4316  \n",
+       "1     225    80             9      1396  \n",
+       "2      95    80             7      4472  \n",
+       "3     325    19            10      4468  \n",
+       "4      19   120            14      4529  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Merge Back the encoded columns\n",
+    "# Concatenate the encoded columns\n",
     "machine_model_2019_df_encoded = machine_model_2019_df.drop(flights_cat, axis=1)\n",
-    "machine_model_2019_df_encoded = machine_model_2019_df_encoded.merge(encode_df,left_index=True, right_index=True)\n",
+    "machine_model_2019_df_encoded = pd.concat([machine_model_2019_df_encoded, encode_df], axis = 1)\n",
     "machine_model_2019_df_encoded.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,16 +690,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(424472, 8)"
+       "(424472, 9)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,40 +734,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the Logistic Regression Model\n",
     "classifier = LogisticRegression(solver='lbfgs',\n",
     "                                max_iter=1000,\n",
-    "                                random_state=20)"
+    "                                random_state=40)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(max_iter=1000, random_state=20)"
+       "LogisticRegression(max_iter=1000, random_state=40)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Fit the model\n",
-    "classifier.fit(X_train, y_train)"
+    "classifier.fit(X_train_scaled, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -908,50 +924,58 @@
        "19           0       1"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Make predictions \n",
-    "y_pred = classifier.predict(X_test)\n",
+    "y_pred = classifier.predict(X_test_scaled)\n",
     "results = pd.DataFrame({\"Prediction\": y_pred, \"Actual\": y_test}).reset_index(drop=True)\n",
     "results.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8263069735884261\n"
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.87      1.00      0.93    116915\n",
+      "           1       1.00      0.26      0.42     24576\n",
+      "\n",
+      "    accuracy                           0.87    141491\n",
+      "   macro avg       0.93      0.63      0.67    141491\n",
+      "weighted avg       0.89      0.87      0.84    141491\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Show the accuracy score of the machine learning model \n",
-    "from sklearn.metrics import accuracy_score\n",
-    "print(accuracy_score(y_test, y_pred))"
+    "# Because dataset is imbalanced we cant use accuracy metric\n",
+    "from sklearn import metrics\n",
+    "print(metrics.classification_report(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[116915,      0],\n",
-       "       [ 24576,      0]], dtype=int64)"
+       "array([[116900,     15],\n",
+       "       [ 18123,   6453]], dtype=int64)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
